<resources>
    <string name="app_name">Ralugan +</string>
    <string name="title_home">Accueil</string>
    <string name="title_search">Recherche</string>
    <string name="title_download">Téléchargement</string>
    <string name="title_profile">Profil</string>
    <string name="title_login">Connexion</string>
    <string name="title_signup">S\'inscrire</string>
    <string name="title_editprofile">Modifier le profil</string>
    <string name="title_disney">Disney</string>
    <string name="title_marvel">Marvel</string>
    <string name="title_starwars">Star Wars</string>
    <string name="title_favorite">Favoris</string>

</resources>