<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_download"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_download" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/common_google_signin_btn_icon_light"
        android:title="@string/title_profile"
        android:visible="false" />

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/common_google_signin_btn_icon_light"
        android:title="@string/title_login"
        android:visible="false" />

</menu>